...
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="Don't have an account?"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_login_change_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <Button
        android:id="@+id/signup_login_change_button"
...
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <EditText
        android:id="@+id/signup_login_enter_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="Enter username"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <EditText
        android:id="@+id/signup_login_enter_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:minWidth="200dp"
        android:minHeight="32dp"
        android:paddingStart="16dp"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_login_ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_login_enter_username"
        app:layout_constraintVertical_bias="0.314" />

    <Button
        android:id="@+id/signup_login_ok_button"
...
