...
    <CheckBox
        android:id="@+id/mood_filter_happy_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Happy"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_filter_emotion_label" />

    <CheckBox
        android:id="@+id/mood_filter_sad_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Sad"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_filter_happy_checkbox" />

    <CheckBox
...
