<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/user_mood_history_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"/>


    <TextView
        android:id="@+id/user_mood_history_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_mood_history_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_mood_history_toolbar" />

    <LinearLayout
        android:id="@+id/followers_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/user_mood_history_label"
        app:layout_constraintEnd_toStartOf="@+id/following_container"
        app:layout_constraintTop_toBottomOf="@id/user_mood_history_toolbar"
        app:layout_constraintTop_toTopOf="@+id/user_mood_history_label"
        app:layout_constraintVertical_bias="0.673">

        <TextView
            android:id="@+id/followers_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/followers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Followers"
            android:textColor="@color/text_color"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/following_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_mood_history_label"
        app:layout_constraintEnd_toStartOf="@+id/user_mood_history_stats_button"
        app:layout_constraintTop_toBottomOf="@id/user_mood_history_toolbar"
        app:layout_constraintTop_toTopOf="@+id/user_mood_history_label"
        app:layout_constraintVertical_bias="0.673">

        <TextView
            android:id="@+id/following_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/following_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Following"
            android:textColor="@color/text_color"
            android:textSize="12sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/mood_following_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/background_color"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_mood_following_filter_button">
    </ListView>

    <ImageButton
        android:id="@+id/user_mood_following_filter_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Filter Mood List"
        android:src="@drawable/filter_mood_list_icon"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_mood_history_toolbar" />

    <ImageButton
        android:id="@+id/user_mood_following_sort_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Sort Mood List"
        android:src="@drawable/sort_mood_list_icon"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_mood_history_toolbar" />

    <ImageButton
        android:id="@+id/user_mood_history_add_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Add a Mood"
        android:scaleType="centerInside"
        android:src="@drawable/add_mood_icon"
        app:layout_constraintBottom_toTopOf="@+id/mood_following_list"
        app:layout_constraintEnd_toStartOf="@+id/user_mood_following_sort_button"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/user_mood_following_filter_button"
        app:layout_constraintTop_toBottomOf="@+id/user_mood_history_toolbar" />

    <ImageButton
        android:id="@+id/user_mood_history_stats_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/screen_color"
        android:tintMode="multiply"
        app:layout_constraintBottom_toBottomOf="@+id/following_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/following_container"
        app:layout_constraintVertical_bias="0.529"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>