...
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/alter_mood_location_label"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/alter_mood_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/button_color"
        android:text="OK"
...
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/alter_mood_location_label"
        app:layout_constraintStart_toEndOf="@+id/alter_mood_location_label"
        app:layout_constraintTop_toTopOf="@+id/alter_mood_location_label" />

    <Spinner
        android:id="@+id/alter_mood_emotion_spinner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/alter_mood_emotion_label"
        app:layout_constraintStart_toEndOf="@+id/alter_mood_emotion_label"
        app:layout_constraintTop_toTopOf="@+id/alter_mood_emotion_label" />
...
