...
    <item
        android:id="@+id/options_follow_requests_button"
        android:icon="@drawable/follow_requests_icon"
        android:title="Requests" />

    <item
        android:id="@+id/options_logout_button"
        android:icon="@drawable/log_out_icon"
        android:title="Log out" />

</menu>
